Encryption/func_ubuntu.h

/* Code generated by cmd/cgo; DO NOT EDIT. */

/* package command-line-arguments */


#line 1 "cgo-builtin-export-prolog"

#include <stddef.h> /* for ptrdiff_t below */

#ifndef GO_CGO_EXPORT_PROLOGUE_H
#define GO_CGO_EXPORT_PROLOGUE_H

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef struct { const char *p; ptrdiff_t n; } _GoString_;
#endif

#endif

/* Start of preamble from import "C" comments.  */





/* End of preamble from import "C" comments.  */


/* Start of boilerplate cgo prologue.  */
#line 1 "cgo-gcc-export-header-prolog"

#ifndef GO_CGO_PROLOGUE_H
#define GO_CGO_PROLOGUE_H

typedef signed char GoInt8;
typedef unsigned char GoUint8;
typedef short GoInt16;
typedef unsigned short GoUint16;
typedef int GoInt32;
typedef unsigned int GoUint32;
typedef long long GoInt64;
typedef unsigned long long GoUint64;
typedef GoInt64 GoInt;
typedef GoUint64 GoUint;
typedef __SIZE_TYPE__ GoUintptr;
typedef float GoFloat32;
typedef double GoFloat64;
typedef float _Complex GoComplex64;
typedef double _Complex GoComplex128;

/*
  static assertion to make sure the file is being used on architecture
  at least with matching size of GoInt.
*/
typedef char _check_for_64_bit_pointer_matching_GoInt[sizeof(void*)==64/8 ? 1:-1];

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef _GoString_ GoString;
#endif
typedef void *GoMap;
typedef void *GoChan;
typedef struct { void *t; void *v; } GoInterface;
typedef struct { void *data; GoInt len; GoInt cap; } GoSlice;

#endif

/* End of boilerplate cgo prologue.  */

#ifdef __cplusplus
extern "C" {
#endif


/* Return type for clientPhase1 */
struct clientPhase1_return {
	char* r0; /* cpkString */
	char* r1; /* shamirShareString */
	GoInt r2; /* id */
};

extern struct clientPhase1_return clientPhase1(GoString p0, GoUint8 p1, GoUint64 p2, GoFloat64 p3, GoFloat64 p4);

extern void clientPhase2(GoSlice p0, GoString p1, GoString p2, GoInt p3, GoString p4, GoUint8 p5, GoUint64 p6, GoFloat64 p7, GoFloat64 p8);

extern void serverPhase1(GoString p0, GoInt p1, GoUint8 p2, GoUint64 p3, GoFloat64 p4);

extern char* serverPhase2(GoString p0, GoInt p1, GoUint8 p2, GoFloat64 p3, GoUint64 p4, GoFloat64 p5, GoInt p6);

#ifdef __cplusplus
}
#endif